fix (foundations): use flexbox to align items on the page

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+  gap: 52px;
+}
+
+.plant {
+  flex-basis: 200px;
+  text-align: center;
 }
 
 /* do not edit this footer */
